--- a/.github/workflows/linux-mips-cpu-gcc.yml
+++ b/.github/workflows/linux-mips-cpu-gcc.yml
@@ -71,8 +71,10 @@ jobs:
       run: mkdir build && cd build && cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/mipsel-linux-gnu.toolchain.cmake -DNCNN_BUILD_TOOLS=OFF -DNCNN_BUILD_EXAMPLES=OFF -DNCNN_BUILD_TESTS=ON ..
     - name: build
       run: cmake --build build -j 2
-    - name: make
-      run: cd build && make -j2 && make install
+    - name: make1
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
+    - name: make2
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
     - name: Zip directory
       run: |
         cd /home/runner/work/ncnn/
@@ -124,8 +126,10 @@ jobs:
       run: mkdir build && cd build && cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/mipsisa32r6el-linux-gnu.toolchain.cmake -DNCNN_BUILD_TOOLS=OFF -DNCNN_BUILD_EXAMPLES=OFF -DNCNN_BUILD_TESTS=ON ..
     - name: build
       run: cmake --build build -j 2
-    - name: make
-      run: cd build && make -j2 && make install
+    - name: make1
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
+    - name: make2
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
       
     - name: Zip directory
       run: |
