--- a/.github/workflows/linux-arm-cpu-gcc.yml
+++ b/.github/workflows/linux-arm-cpu-gcc.yml
@@ -72,8 +72,10 @@ jobs:
         mkdir build && cd build
         cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/arm-linux-gnueabi.toolchain.cmake -DNCNN_BUILD_TOOLS=OFF -DNCNN_BUILD_EXAMPLES=OFF -DNCNN_BUILD_TESTS=ON ..
         cmake --build . -j 2
-    - name: make
-      run: cd build && make -j2 && make install
+    - name: make1
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
+    - name: make2
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
     - name: build-noint8
       run: |
         mkdir build-noint8 && cd build-noint8
@@ -134,8 +136,10 @@ jobs:
         mkdir build && cd build
         cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/arm-linux-gnueabihf.toolchain.cmake -DNCNN_BUILD_TOOLS=OFF -DNCNN_BUILD_EXAMPLES=OFF -DNCNN_BUILD_TESTS=ON ..
         cmake --build . -j 2
-    - name: make
-      run: cd build && make -j2 && make install
+    - name: make1
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
+    - name: make2
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
     - name: build-noint8
       run: |
         mkdir build-noint8 && cd build-noint8
@@ -204,8 +208,10 @@ jobs:
         mkdir build-noint8 && cd build-noint8
         cmake -DCMAKE_TOOLCHAIN_FILE=../toolchains/arm-linux-gnueabihf-vfpv3-d16.toolchain.cmake -DNCNN_BUILD_TOOLS=OFF -DNCNN_BUILD_EXAMPLES=OFF -DNCNN_BUILD_TESTS=ON -DNCNN_INT8=OFF ..
         cmake --build . -j 2
-    - name: make
-      run: cd build-noint8 && make -j2 && make install
+    - name: make1
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
+    - name: make2
+      run: cd build && make -j2 && make install && cd src && make -j2 && make install
     - name: Zip directory
       run: |
         cd /home/runner/work/ncnn/
