--- a/.github/workflows/linux-arm-cpu-gcc.yml
+++ b/.github/workflows/linux-arm-cpu-gcc.yml
@@ -71,7 +71,7 @@ jobs:
         sudo apt-get update
         cd /home/runner/work/ncnn/ncnn && git submodule init && git submodule update
         cd /home/runner/work/ncnn/ncnn/python
-        CMAKE_TOOLCHAIN_FILE="/home/runner/work/ncnn/ncnn/toolchains/arm-linux-gnueabi.toolchain.cmake" python setup.py install
+        CMAKE_TOOLCHAIN_FILE="/home/runner/work/ncnn/ncnn/toolchains/arm-linux-gnueabi.toolchain.cmake" python setup.py.i install
     - name: build
       run: |
         mkdir build && cd build
@@ -138,7 +138,7 @@ jobs:
         sudo apt-get update
         cd /home/runner/work/ncnn/ncnn && git submodule init && git submodule update
         cd /home/runner/work/ncnn/ncnn/python
-        CMAKE_TOOLCHAIN_FILE="/home/runner/work/ncnn/ncnn/toolchains/arm-linux-gnueabi.toolchain.cmake" python setup.py install
+        CMAKE_TOOLCHAIN_FILE="/home/runner/work/ncnn/ncnn/toolchains/arm-linux-gnueabi.toolchain.cmake" python setup.py.i install
     - name: build
       run: |
         mkdir build && cd build
@@ -206,7 +206,7 @@ jobs:
         sudo apt-get update
         cd /home/runner/work/ncnn/ncnn && git submodule init && git submodule update
         cd /home/runner/work/ncnn/ncnn/python
-        CMAKE_TOOLCHAIN_FILE="/home/runner/work/ncnn/ncnn/toolchains/arm-linux-gnueabi.toolchain.cmake" python setup.py install
+        CMAKE_TOOLCHAIN_FILE="/home/runner/work/ncnn/ncnn/toolchains/arm-linux-gnueabi.toolchain.cmake" python setup.py.i install
     - name: build
       run: |
         mkdir build && cd build
