--- a/.github/workflows/release-python.yml
+++ b/.github/workflows/release-python.yml
@@ -47,22 +47,25 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
-          - { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
-          - { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
+          #- { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-manylinux*' }
+          #- { os: ubuntu-20.04, arch: x86_64,     build: 'cp*-musllinux*' }
+          #- { os: ubuntu-20.04, arch: x86_64,     build: 'pp*'            }
           - { os: ubuntu-20.04, arch: arm,     build: 'cp*-manylinux*' }
           - { os: ubuntu-20.04, arch: arm,     build: 'cp*-musllinux*' }
           - { os: ubuntu-20.04, arch: arm,     build: 'pp*'            }
-          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' }
-          - { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' }
-          - { os: ubuntu-20.04, arch: i686,       build: 'pp*'            }
-          - { os: windows-2019, arch: x86,        build: 'cp*'            }
-          - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
-          - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
-          - { os: windows-2019, arch: ARM64,      build: 'cp*'            }
-          - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
-          - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          - { os: macos-latest, arch: arm64,      build: 'cp*'            }
+          - { os: ubuntu-20.04, arch: mips,     build: 'cp*-manylinux*' }
+          - { os: ubuntu-20.04, arch: mips,     build: 'cp*-musllinux*' }
+          - { os: ubuntu-20.04, arch: mips,     build: 'pp*'            }
+          #- { os: ubuntu-20.04, arch: i686,       build: 'cp*-manylinux*' }
+          #- { os: ubuntu-20.04, arch: i686,       build: 'cp*-musllinux*' }
+          #- { os: ubuntu-20.04, arch: i686,       build: 'pp*'            }
+          #- { os: windows-2019, arch: x86,        build: 'cp*'            }
+          #- { os: windows-2019, arch: AMD64,      build: 'cp*'            }
+          #- { os: windows-2019, arch: AMD64,      build: 'pp*'            }
+          #- { os: windows-2019, arch: ARM64,      build: 'cp*'            }
+          #- { os: macos-latest, arch: x86_64,     build: 'cp*'            }
+          #- { os: macos-latest, arch: x86_64,     build: 'pp*'            }
+          #- { os: macos-latest, arch: arm64,      build: 'cp*'            }
 
     steps:
     - uses: actions/checkout@v4
