--- a/.github/workflows/release-python.yml
+++ b/.github/workflows/release-python.yml
@@ -237,21 +237,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [aarch64, ppc64le, s390x]
-        build: [ 'cp36-manylinux*',  'cp37-manylinux*',  'cp38-manylinux*',
-                 'cp39-manylinux*',  'cp310-manylinux*', 'cp311-manylinux*',
-                 'cp312-manylinux*', 'cp36-musllinux*',  'cp37-musllinux*',
-                 'cp38-musllinux*',  'cp39-musllinux*',  'cp310-musllinux*',
-                 'cp311-musllinux*', 'cp312-musllinux*' ]
-        include:
-          - arch: aarch64
-            build: 'pp37-*'
-          - arch: aarch64
-            build: 'pp38-*'
-          - arch: aarch64
-            build: 'pp39-*'
-          - arch: aarch64
-            build: 'pp310-*'
+        arch: [mips, mipsel, arm]
+        build: [ 'cp36-manylinux*',  'cp37-manylinux*',  'cp38-manylinux*','cp39-manylinux*',  'cp310-manylinux*', 'cp311-manylinux*','cp312-manylinux*', 'cp36-musllinux*',  'cp37-musllinux*','cp38-musllinux*',  'cp39-musllinux*',  'cp310-musllinux*','cp311-musllinux*', 'cp312-musllinux*' ]
 
     steps:
     - uses: actions/checkout@v4
